# kws

./: .gitignore  README.md  final_solution.ipynb  pyproject.toml  run.py  submission.csv  submit.py
conf/: bcresnet.yaml  bcresnet_ref.yaml  bcresnet_slim.yaml  bcresnet_slim_se.yaml  conformer_tiny.yaml  conv1d.yaml  conv1d_depthwise.yaml  crnn.yaml  depthwise_gru.yaml  dsresnet10.yaml  dsresnet10_plus.yaml  dsresnet_lite.yaml  mobilenetv3_small.yaml  tcn.yaml  tcn_attn.yaml  tcn_se.yaml
conf/sweeps/: bcresnet.yaml  tcn.yaml
src/: model.py  module.py
tests/: test_bcresnet.py  test_param_counts.py
